@@ -1,3 +1,9 @@
+2012-11-16  Jan Tatarik  <jan.tatarik@gmail.com>
+
+	* gnus-score.el (gnus-score-body):
+	* gnus-logic.el (gnus-advanced-body): Don't score by headers when
+	scoring by body.
+
 2012-11-14  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* dgnushack.el (define-obsolete-variable-alias): Simplify.
